[package]
name = "x509-cert"
version = "0.3.0-rc.4"
description = """
Pure Rust implementation of the X.509 Public Key Infrastructure Certificate
format as described in RFC 5280
"""
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/RustCrypto/formats/tree/master/x509-cert"
repository = "https://github.com/RustCrypto/formats"
categories = ["cryptography", "data-structures", "encoding", "no-std"]
keywords = ["crypto"]
readme = "README.md"
edition = "2024"
rust-version = "1.85"

[dependencies]
const-oid = { version = "0.10", features = ["db"] }
der = { version = "0.8.0-rc.10", features = ["alloc", "derive", "flagset", "oid"] }
spki = { version = "0.8.0-rc.4", features = ["alloc"] }

# optional dependencies
arbitrary = { version = "1.4", features = ["derive"], optional = true }
digest = { version = "0.11.0-rc.11", optional = true, default-features = false }
sha1 = { version = "0.11.0-rc.5", default-features = false, optional = true }
signature = { version = "3.0.0-rc.10", features = ["rand_core"], optional = true }
tls_codec = { version = "0.4", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
hex-literal = "1"
rand = "0.10.0-rc.8"
rsa = { version = "0.10.0-rc.15", features = ["sha2"] }
ecdsa = { version = "0.17.0-rc.16", features = ["digest", "pem"] }
p256 = "0.14.0-rc.7"
rstest = "0.26"
sha2 = { version = "0.11.0-rc.5", features = ["oid"] }
tempfile = "3.5"
tokio = { version = "1.45", features = ["macros", "rt"] }
x509-cert-test-support = { path = "./test-support" }

[features]
default = ["pem", "std"]
std = ["der/std", "spki/std", "tls_codec?/std"]

arbitrary = ["dep:arbitrary", "std", "der/arbitrary", "spki/arbitrary"]
builder = ["dep:sha1", "signature"]
digest = ["dep:digest", "spki/digest"]
hazmat = []
pem = ["der/pem", "spki/pem"]
sct = ["dep:tls_codec"]
fingerprint = ["spki/fingerprint"]
base64 = ["spki/base64"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
